fix URI construction